Actualizadas las traducciones

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -154,7 +154,7 @@
     "banking-movements": "Bankbewegungen",
     "barcode": "Strichcode",
     "bcc": "BCC",
-    "become-sponsor": "Werde Sponsoren",
+    "become-sponsor": "Sponsoren werden",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
@@ -953,7 +953,7 @@
     "method-payment": "Zahlungsart",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mindestbetrag ohne CIF\/NIF",
     "minimum-stock": "Mindestbestand",
     "minutes": "Minuten",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
@@ -971,7 +971,7 @@
     "month-10": "Oktober",
     "month-11": "Noeviembre",
     "month-12": "Dezember",
-    "month-2": "Febrero",
+    "month-2": "Februar",
     "month-3": "März",
     "month-4": "April",
     "month-5": "Mai",
@@ -980,7 +980,7 @@
     "month-8": "Agosto",
     "month-9": "Septiembre",
     "month-name": "Monatsname",
-    "month-wildcard-info": "Current month (of the current date)",
+    "month-wildcard-info": "Aktueller Monat (des aktuellen Datums)",
     "monthly": "monatlich",
     "monthly-payment": "Pago mensual",
     "months": "Monate",
@@ -1034,7 +1034,7 @@
     "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
     "not-public": "Nicht öffentlich",
     "not-stored-content": "Inhalt nicht gespeichert",
-    "not-valid-email": "Invalid email %email%",
+    "not-valid-email": "Ungültige E-Mail %email%",
     "not-valid-fiscal-number": "Ungültige Steuernummer% type% %number%",
     "not-valid-image": "Keine gültige Bilddatei",
     "not-valid-percentage-retention": "Ungültiger Prozentsatz. Muss größer als 0,00 sein",
@@ -1223,7 +1223,7 @@
     "pvpsindto-line-error": "Fehler im Wert von pvpsindto der Zeile 0 des Dokuments. Richtiger Wert: 1",
     "pvptotal-line-error": "Fehler im pvptotal Wert der Zeile 0 des Dokuments. Richtiger Wert: 1",
     "quantity": "Menge",
-    "quantity-abb": "quantity-abb",
+    "quantity-abb": "Menge",
     "quantity-remaining": "Verbleibende Menge",
     "quantity-served": "quantity-served",
     "quantity-sold": "quantity-sold",
@@ -1236,7 +1236,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Mehr lesen",
     "readonly": "Nur lesen",
-    "rebuild": "rebuild",
+    "rebuild": "Wiederherstellen",
     "rebuild-completed": "Wiederaufbau abgeschlossen",
     "rebuild-stock": "Bestand neu erstellen",
     "receipt": "Beleg",
@@ -1345,13 +1345,13 @@
     "send-documents": "Dokumente senden",
     "send-images": "Bilder senden",
     "send-invoices": "Enviar facturas",
-    "send-location": "Enviar ubicación",
+    "send-location": "Standort senden",
     "send-mail": "E-Mail senden",
     "send-mail-error": "Fehler beim Senden der E-Mail",
     "send-mail-ok": "E-Mail erfolgreich gesendet",
     "send-videos": "Videos senden",
     "sent-a-audio": "h",
-    "sent-a-document": "Envió un documento",
+    "sent-a-document": "Ein Dokument gesendet",
     "sent-a-location": "Standort gesendet",
     "sent-a-picture": "Ein Bild gesendet",
     "sent-a-video": "Ein Video gesendet",
@@ -1392,7 +1392,7 @@
     "simple": "Einfach",
     "simplified": "Vereinfacht",
     "size": "Größe",
-    "sketch": "Boceto",
+    "sketch": "Skizze",
     "sketch-invoice-warning": "Diese Rechnung ist noch ein Entwurf. Machen Sie sie offiziell, indem Sie ihren Status auf ausgestellt ändern.",
     "small": "Klein",
     "smaller-than": "Kleiner als",
@@ -1411,12 +1411,12 @@
     "special-account": "Sonderkonto",
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "special-accounts",
-    "specials-actions": "Specials Actions",
+    "specials-actions": "Sonderaktionen",
     "spreadsheet-xls": "Excel-Datei",
     "standard": "Standard",
     "start": "Start",
     "start-date": "Anfangsdatum",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Startzeit",
     "start-time": "Startzeit",
     "starting-cron": "Ab FacturaScripts Cron...",
     "state": "Zustand",
@@ -1500,7 +1500,7 @@
     "tax-area": "Steuerbereich",
     "tax-areas": "tax-areas",
     "tax-base": "Steuerbemessungsgrundlage",
-    "tax-credit-account": "Credit account for taxes",
+    "tax-credit-account": "Steuergutschriftkonto",
     "tax-debit-account": "Steuerlastschriftkonto",
     "tax-transport": "Steuerverkehr",
     "taxes": "Steuern",
@@ -1552,7 +1552,7 @@
     "tracking-code": "Tracking-Code",
     "transfer": "Übertragen",
     "transfers": "Überweisungen",
-    "transfers-stock": "Transfers stock",
+    "transfers-stock": "Bestandsübertragungen",
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
     "travel": "Reise",
@@ -1592,7 +1592,7 @@
     "updated-model": "Aktualisiert %model% (%key%) %desc%",
     "updater": "Updater",
     "updates-available": "Verfügbare Updates",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available-p": "Es gibt verfügbare Updates für FacturaScripts. Bitte klicken Sie auf den Aktualisierer und laden Sie die neue Version herunter. Die Updates beheben Fehler und fügen neue Funktionen hinzu.",
     "updating-attached-relations": "Aktualisierung der Zähler für angehängte Dateien",
     "upload-file": "Datei hochladen",
     "uploaded-at": "geladen am",
@@ -1605,7 +1605,7 @@
     "using-apc": "Verwenden des APC-Caches",
     "using-filecache": "Verwenden von Filecache",
     "using-memcache": "Memcache verwenden",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Gültig für einen Tag",
     "validate": "bestätigen",
     "validate-iban": "IBAN bestätigen",
     "valuation-type": "Bewertungsart",
@@ -1618,7 +1618,7 @@
     "variants": "Variante",
     "vat": "IVA",
     "vat-document": "Steuerdokument",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "USt-Ausnahme",
     "vat-number-is-short": "Die Nummer '%vat-number%' ist zu kurz",
     "vat-number-not-vies": "Die Nummer '%vat-number%' ist nicht im VIES-System registriert",
     "vat-regime": "MwSt-Regelung",
@@ -1675,7 +1675,7 @@
     "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
     "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-picture": "Sie haben ein Bild gesendet",
     "you-sent-a-video": "Sie haben ein Video gesendet",
     "you-should-change-passwd": "Sie sollten Ihr Password ändern",
     "your": "Ihr",
