--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -206,7 +206,7 @@
     "cant-load-controller": "Ezin da  '%controllerName%' kontroladorea kargatu.",
     "cant-modify-reference": "Ezin da erreferentzia aldatu.",
     "cant-remove-accounting-entry": "Ezin da idazpena ezabatu",
-    "cant-remove-invoice-refund": "Ezin da faktura kendu jadanik itzulgarriarekin",
+    "cant-remove-invoice-refund": "Ezin da faktura kendu jadanik itzulgarria dena",
     "cant-remove-receipt": "Ezin da ordainagiria ezabatu",
     "cant-update-audit-log": "Ezin da aldatu auditoria-erregistro bat",
     "card": "Txartela",
@@ -1165,7 +1165,7 @@
     "plugins": "Pluginak",
     "plugins-p": "Pluginak funtzio berriak gehitzeko aukera ematen dute. Aktibatu behar dituzunak orain, edo nahi duzunean administratzailearen menutik.",
     "points": "Puntuak",
-    "points-of-interest": "Interes puntuak",
+    "points-of-interest": "Intereseko puntu",
     "port": "Ataka",
     "position": "Kargua",
     "positive-balance": "Saldo positiboa",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Devoluzioa egingo da %document% dokumentua itzulita",
     "refunds": "Itzulketak",
     "register": "Erregistratu",
-    "register-install-ad": "Registratu FacturaScripts instalazioa",
+    "register-install-ad": "Erregistratu FacturaScripts instalazioa",
     "register-install-ad-p": "Facturako instalazioa erregistratzen baduzu, 1 hilabete PRO babesa izango duzu, gure plugin esklusiboetako bat deskargatzeko. Gainera, core-eko eta PHP-ren bertsioen estatistikak lortzen laguntzen du.",
     "register-installation": "Instalazioa erregistratu",
     "register-installation-p": "Zure instalazioa erregistratu ordainpeko edo pribatuak diren pluginak eguneratu ahal izateko.",
@@ -1592,8 +1592,8 @@
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updater": "Eguneratzailea",
     "updates-available": "Eguneratzeak eskuragarri",
-    "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzailearen gainean eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
-    "updating-attached-relations": "Erantsitutako erlazioak eguneratzen",
+    "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzailean eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
+    "updating-attached-relations": "Erantsitako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
     "url": "Webgunea",
