--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -240,7 +240,7 @@
     "city": "Città",
     "click-link-to-add": "Fare clic sul link per aggiungere",
     "clone": "Clone",
-    "clone-account-entry": "Duplicate the accounting entry",
+    "clone-account-entry": "Duplicare la registrazione contabile",
     "close": "vicino",
     "close-box": "Chiudi cassa",
     "close-exercise": "chiudere l'esercizio",
@@ -413,7 +413,7 @@
     "delete": "rimuovere",
     "delete-all": "Elimina tutto",
     "delete-closing": "elimina-la-chiusura",
-    "delete-data": "Delete data",
+    "delete-data": "Elimina dati",
     "delete-file": "elimina-file",
     "delete-logs": "Cancella dati di navigazione",
     "delete-opening": "elimina-l'apertura",
@@ -475,7 +475,7 @@
     "document-states": "Stati del documento",
     "document-type": "Tipo di documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
-    "document-wildcard-info": "Document indicated in the head of the accounting entry",
+    "document-wildcard-info": "Documento indicato nell'intestazione della registrazione contabile",
     "document-without-total": "Documento %document% senza totali o con totale a 0.",
     "documentation": "documentazione",
     "documents": "Documenti",
@@ -589,7 +589,7 @@
     "expense-subaccount": "Sottoconto per spese bancarie",
     "expenses": "Spese",
     "expiration": "Scadenza",
-    "expiration-type": "expiration-type",
+    "expiration-type": "Tipo di scadenza",
     "expired": "scaduto",
     "expired-receipt": "Ricevuta scaduta",
     "export": "Esporta",
@@ -639,7 +639,7 @@
     "font-size": "Dimensione del font",
     "footer": "Piè di pagina",
     "footer-text": "testo-di-chiusura",
-    "for-admins": "Para administradores",
+    "for-admins": "Per gli amministratori",
     "for-all": "Per tutti",
     "for-all-exercises": "Per tutti gli esercizi",
     "for-purchase": "Per l'acquisto",
@@ -749,7 +749,7 @@
     "impacted-tax-subaccount": "Subconto imposta impattata",
     "import": "Importa",
     "import-accounting-plan": "Importa piano contabile",
-    "import-accounting-plan-p": "import-accounting-plan-p",
+    "import-accounting-plan-p": "Lascia questo campo vuoto per utilizzare il piano contabile predefinito. Oppure seleziona un file con il tuo piano contabile personalizzato.",
     "import-file": "Importare file",
     "in-progress": "In corso",
     "in-stock": "in-stock",
@@ -779,7 +779,7 @@
     "invalid-date-there-are-invoices-before": "Data non valida: %date%. La fattura %other% è antecedente eppure ha una data successiva: %other-date%. Ogni fattura deve avere una data anteriore o uguale alla seguente.",
     "invalid-iban": "IBAN invalido %iban%",
     "invalid-iso-code": "Codice ISO '%iso-code%' non valido",
-    "invalid-number": "invalid-number",
+    "invalid-number": "Numero non valido: %number%",
     "invalid-request": "Richiesta non valida",
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Indirizzo web non valido: %web%",
@@ -800,7 +800,7 @@
     "ip": "IP",
     "ip-banned": "ip-bannato",
     "irpf": "IRPEF",
-    "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
+    "irpf-record-not-found": "Registro IRPF %value%% non trovato.",
     "irpf-subaccount-not-found": "Subconto IRPF non trovato",
     "is-admin": "È amministratore",
     "is-creditor": "È creditore",
@@ -816,7 +816,7 @@
     "job-name": "Nome del lavoro",
     "journal": "Giornale",
     "journal-closing": "Chiusura giornale",
-    "journal-opening": "journal-opening",
+    "journal-opening": "Giornale di apertura",
     "journals": "Diari",
     "july": "Luglio",
     "june": "Giugno",
@@ -829,19 +829,19 @@
     "languages-cs_CZ": "Ceco",
     "languages-de_DE": "languages-de_DE",
     "languages-en_EN": "Inglese",
-    "languages-es_AR": "Español (Argentina)",
+    "languages-es_AR": "Spagnolo (Argentina)",
     "languages-es_CL": "languages-es_CL",
     "languages-es_CO": "Spagnolo (Colombia)",
     "languages-es_CR": "Spagnolo (Costa Rica)",
     "languages-es_DO": "Spagnolo (Rep. Dominicana)",
     "languages-es_EC": "lingue-es_EC",
-    "languages-es_ES": "Spanish (Spain)",
+    "languages-es_ES": "Spagnolo (Spagna)",
     "languages-es_GT": "Italiano",
     "languages-es_MX": "Spagnolo (Messico)",
     "languages-es_PA": "Spagnolo (Panama)",
     "languages-es_PE": "Spagnolo (Perù)",
     "languages-es_UY": "languages-es_UY",
-    "languages-eu_ES": "languages-eu_ES",
+    "languages-eu_ES": "Euskera",
     "languages-fr_FR": "Francese",
     "languages-gl_ES": "lingue-gl_ES",
     "languages-it_IT": "Italiano",
@@ -889,7 +889,7 @@
     "lock-accounting": "Blocca contabilità",
     "lock-entry": "Blocca voce",
     "lock-invoice": "blocca fattura",
-    "lock-unlock": "Lock-Unlock",
+    "lock-unlock": "(S)Blocco",
     "lock-unlock-account-entry": "Blocca\/Sblocca la voce contabile",
     "locked": "Bloccato",
     "log": "Log",
@@ -973,7 +973,7 @@
     "month-12": "Dicembre",
     "month-2": "Febbraio",
     "month-3": "Marzo",
-    "month-4": "Abril",
+    "month-4": "Aprile",
     "month-5": "Maggio",
     "month-6": "Giugno",
     "month-7": "Luglio",
@@ -1017,7 +1017,7 @@
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
     "no-extra-lines": "Nessuna linea extra",
     "no-gaps-found": "Nessun gap trovato",
-    "no-invoice": "no-invoice",
+    "no-invoice": "Nessuna fattura",
     "no-outstanding-amount": "nessuna somma in sospeso",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Sin referencia",
@@ -1273,14 +1273,14 @@
     "reject": "Rifiuta",
     "rejected": "rifiutato",
     "related": "relazionato",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-bank-charges": "Subconto correlato per spese bancarie (commissioni, ecc)",
     "related-subaccount-purchases-sales": "Subconto correlato per acquisti e vendite",
     "reloading": "reloading",
     "remove-filter": "rimuovi filtro",
     "remove-from-list": "Rimuovi dalla lista",
     "removing-logs-until": "Rimozione log fino al %date%",
     "renew": "renew",
-    "renumber": "Renumerar",
+    "renumber": "Rinumerare",
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Rinumerazione delle voci contabili completata",
@@ -1295,7 +1295,7 @@
     "report-non-grouping-account": "Non raggruppare per conto",
     "report-taxes-p": "Questo rapporto consente di ottenere la scomposizione delle imposte sulle fatture di acquisto o di vendita del range selezionato",
     "reports": "Rapporti",
-    "request-sent": "request-sent",
+    "request-sent": "Richiesta inviata",
     "required": "richiesto",
     "requires-core": "Richiede FacturaScripts %version%",
     "reserved": "Riservato",
@@ -1306,7 +1306,7 @@
     "restore-data": "Ripristinare i dati",
     "result": "Risultato",
     "retention": "ritenzione",
-    "retentions": "Retentions",
+    "retentions": "Ritenzioni",
     "review-date": "Data della recensione",
     "right": "Destra",
     "risky-customer": "cliente a rischio",
@@ -1349,7 +1349,7 @@
     "send-mail": "Inviare mail",
     "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "Email inviato correttamente",
-    "send-videos": "Enviar vídeos",
+    "send-videos": "Invia video",
     "sent-a-audio": "Ha inviato un audio",
     "sent-a-document": "Ha inviato un documento",
     "sent-a-location": "Ha inviato una posizione",
@@ -1442,7 +1442,7 @@
     "subaccount-irpf": "Conto per deduzioni",
     "subaccount-irpf-creditor": "Subconto del creditore IRPF",
     "subaccount-not-found": "Account secondario 0 non trovato.",
-    "subaccount-purchases": "Account for purchases",
+    "subaccount-purchases": "Conto per acquisti",
     "subaccount-pyg-not-found": "subaccount-pyg-not-found",
     "subaccount-sales": "Conto vendite",
     "subaccounts": "sottoconti",
@@ -1618,7 +1618,7 @@
     "variants": "Varianti",
     "vat": "IVA",
     "vat-document": "Documento IVA",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "Eccezione IVA",
     "vat-number-is-short": "Il numero '%vat-number%' è troppo corto",
     "vat-number-not-vies": "Il numero '%vat-number%' non è registrato nel sistema VIES",
     "vat-regime": "Regime IVA",
@@ -1645,7 +1645,7 @@
     "weeks": "Settimane",
     "weight": "Peso",
     "which-logs-store": "Quali log archiviare",
-    "width": "width",
+    "width": "Larghezza",
     "wildcard": "Wildcard",
     "wildcard-general-info": "Verrà sostituito dal valore corrispondente",
     "wildcard-title": "Wildcard sostituibili per valore",
