--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -446,10 +446,10 @@
     "description-3": "Descrição 3",
     "description-4": "Descrição 4",
     "description-4ba": "Descrição 4ba",
-    "description2": "description2",
+    "description2": "Descrição 2",
     "description3": "Descrição 3",
     "design": "Design",
-    "destination-warehouse": "Destination warehouse",
+    "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
     "difference": "Diferença",
@@ -458,20 +458,20 @@
     "disable": "Desativar",
     "disable-plugins": "Desativar plugins",
     "disabled": "Desativado",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Plugins desativados",
     "discharge-date": "Data de descarga: 0",
     "discount": "Desconto",
     "display": "Display",
     "display-date": "Data de exibição",
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "do-not-group",
-    "do-nothing": "Do nothing",
+    "do-nothing": "Não fazer nada",
     "doc-type": "Document type",
     "document": "Documento",
     "document-configuration": "Configuração de documentos",
     "document-report": "Relatório de documentos",
     "document-sequence": "document-sequence",
-    "document-sequences": "document-sequences",
+    "document-sequences": "Sequências de documentos",
     "document-states": "Estados do documento",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
@@ -512,10 +512,10 @@
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
     "email-signature": "Assinatura de email",
-    "email-to": "Email To",
+    "email-to": "Email para",
     "emails": "Emails",
     "emails-sent": "Emails enviados",
-    "employee": "Employee",
+    "employee": "Empregado",
     "employees": "Empregados",
     "empty": "Vazio",
     "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
@@ -540,7 +540,7 @@
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar linhas",
     "error-no-name-in-settings": "Erro na vista %viewName%. Falta informar a coluna 'name' no xml",
-    "error-on-xml-file": "Error on XML file %fileName%",
+    "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
     "error-saving-lines": "Erro ao salvar as linhas",
@@ -611,7 +611,7 @@
     "file-not-found": "O arquivo 0 não foi encontrado.",
     "file-not-supported": "Arquivo não suportado",
     "file-size-error": "Erro ao enviar o arquivo %fileName% pois excede o tamanho máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-type-error": "Erro ao enviar o arquivo do tipo %typeFile%. Os tipos permitidos são: áudio, documento, imagem e vídeo.",
     "file-yet-exists": "O ficheiro já existe: %filePath%",
     "filecache-clear": "Filecache desmarcada.",
     "filecache-delete-key-item": "Elemento eliminado '0' da Filecache.",
@@ -668,7 +668,7 @@
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "generate-invoice",
-    "generate-receipts": "generate-receipts",
+    "generate-receipts": "Gerar recibos",
     "generate-settlements": "generate-settlements",
     "generate-test-data": "Gerar dados de teste",
     "generate-title": "Criar Relatório",
@@ -702,7 +702,7 @@
     "group-by-month": "group-by-month",
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subconta",
-    "group-by-week": "group-by-week",
+    "group-by-week": "Agrupar por semana",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "Agrupar por ano",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
@@ -808,7 +808,7 @@
     "iso": "ISO",
     "issued": "Emitido",
     "item-limit": "Itens por página",
-    "items-added-correctly": "items-added-correctly",
+    "items-added-correctly": "%num% itens adicionados corretamente",
     "items-removed-correctly": "%num% elementos removidos corretamente",
     "ivarep-subaccount-not-found": "Subconta de IVA repercutido não encontrada",
     "ivasop-account-not-found": "ivasop-account-not-found",
@@ -1004,7 +1004,7 @@
     "new-address": "Nueva traducción",
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
-    "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
     "new-password": "Nova senha",
     "new-price": "Novo preço",
     "new-refund": "Nova Devolução",
@@ -1042,7 +1042,7 @@
     "notes": "Notas",
     "notice": "Aviso",
     "notices": "Avisos",
-    "notification": "Notificación",
+    "notification": "Notificação",
     "notifications": "Notificaciones",
     "november": "Novembro",
     "number": "Número",
@@ -1203,7 +1203,7 @@
     "product-not-found": "Produto %ref% não encontrado",
     "products": "Produtos",
     "profile": "perfil",
-    "profit-and-loss": "Profit and Loss",
+    "profit-and-loss": "Perdas e Ganhos",
     "profit-and-loss-balance": "Profit and loss accounts",
     "profits": "Lucros",
     "project": "Projeto",
@@ -1235,7 +1235,7 @@
     "react": "Reaccionar",
     "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Leer más",
-    "readonly": "readonly",
+    "readonly": "Apenas leitura",
     "rebuild": "rebuild",
     "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
@@ -1258,11 +1258,11 @@
     "reference+description": "Reference + Description",
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
-    "refund-amount": "Cantidad devuelta",
+    "refund-amount": "Quantidade devolvida",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Registar a instalação do FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
@@ -1282,10 +1282,10 @@
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
-    "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
+    "renumber-accounting-error": "Ocorreu um erro durante a renumeração das entradas contábeis no exercício fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de lançamentos contabilísticos concluída",
     "renumber-accounting-p": "Renumerar lançamentos por data, de menor a maior",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumerar as faturas com base na data, da mais antiga para a mais recente",
     "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
     "repeat-new-password": "Repita a senha",
     "repeat-password": "Repetir contraseña",
@@ -1376,14 +1376,14 @@
     "shipping": "Shipping",
     "shipping-address": "Endereço de entrega",
     "shop": "Loja",
-    "shops": "Tiendas",
+    "shops": "Lojas",
     "short": "Curto",
     "short-name": "Nome curto",
     "show": "Mostrar",
     "show-balance-graphic": "Mostrar gráficos em lançamentos",
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostrar recibos expirados",
-    "show-month-stats": "Mostrar estadísticas mensuales",
+    "show-month-stats": "Mostrar estatísticas mensais",
     "show-pending-remittances": "Mostrar remessas pendentes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
@@ -1497,7 +1497,7 @@
     "tasks-component-title": "Tarefas",
     "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
-    "tax-area": "tax-area",
+    "tax-area": "Área fiscal",
     "tax-areas": "tax-areas",
     "tax-base": "Tax base",
     "tax-credit-account": "Credit account for taxes",
@@ -1563,7 +1563,7 @@
     "type-critical": "Type critical",
     "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
-    "type-error": "Type error",
+    "type-error": "Erro de tipo",
     "type-info": "Informação do tipo",
     "type-notice": "Tipo aviso",
     "type-success": "Tipo correto",
@@ -1605,7 +1605,7 @@
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
@@ -1659,7 +1659,7 @@
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
-    "working-hours": "Horario de trabajo",
+    "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
