--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -77,7 +77,7 @@
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
     "all-variants": "Todas as variantes",
-    "allow-delete": "Permitir apagar",
+    "allow-delete": "Permitir excluir",
     "allow-delete-data": "Permitir DELETE",
     "allow-export": "Permitir exportar",
     "allow-get-data": "Permitir GET",
@@ -199,7 +199,7 @@
     "cant-delete-default-currency": "Não é possível excluir a moeda padrão",
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
     "cant-delete-default-serie": "Não é possível eliminar a Série por defeito",
-    "cant-delete-default-tax": "cant-delete-default-tax",
+    "cant-delete-default-tax": "Não é possível excluir o imposto padrão",
     "cant-delete-default-warehouse": "Não é possível excluir o armazém padrão",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
     "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. Mas você pode bloqueá-lo se desejar.",
@@ -449,7 +449,7 @@
     "description2": "Descrição 2",
     "description3": "Descrição 3",
     "design": "Design",
-    "destination-warehouse": "Destination warehouse",
+    "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
     "difference": "diferença",
@@ -512,10 +512,10 @@
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
     "email-signature": "Assinatura de email",
-    "email-to": "Email To",
+    "email-to": "Email para",
     "emails": "E-mails",
     "emails-sent": "E-mails enviados",
-    "employee": "Employee",
+    "employee": "Empregado",
     "employees": "Funcionários",
     "empty": "Vazio",
     "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
@@ -541,8 +541,8 @@
     "error-deleting-lines": "Erro ao excluir linhas",
     "error-no-name-in-settings": "Erro ao testar a vista %viewName%. Nenhuma coluna 'name' no xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
-    "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
-    "error-reading-file": "Erro ao ler o arquivo '0'",
+    "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '%fileName%' não existe ou está mal formado",
+    "error-reading-file": "Erro ao ler o arquivo '%fileName%'",
     "error-saving-lines": "Erro ao salvar as linhas",
     "error-saving-stock": "Erro ao salvar o estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
@@ -616,10 +616,10 @@
     "filecache-clear": "Cache de arquivos limpa.",
     "filecache-delete-key-item": "Elemento '%item%' excluído do Filecache.",
     "filecache-get-key-item": "Obtido elemento '0' do Filecache.",
-    "filecache-set-key-item": "Elemento configurado '0' para Filecache.",
+    "filecache-set-key-item": "Elemento atribuído '%item%' ao Filecache.",
     "files": "arquivos",
     "filter-method": "Método de filtragem",
-    "filter-records-containing-indicated-value": "Filtrar registros contendo o valor indicado",
+    "filter-records-containing-indicated-value": "Filtrar registros que contêm o valor indicado",
     "filters": "Filtros",
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
@@ -647,8 +647,8 @@
     "foresee": "Prever",
     "format": "Formato",
     "formula-cost-price": "formula-cost-price",
-    "formula-sale-price": "formula-sale-price",
-    "formula-to-apply": "Fórmula para candidatar-se",
+    "formula-sale-price": "preço - x% - y",
+    "formula-to-apply": "Fórmula a aplicar",
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto Trimestre",
     "free": "Grátis",
@@ -741,7 +741,7 @@
     "icon": "ícone",
     "id": "Id.",
     "idaccount": "Id. Conta",
-    "idem-wildcard-info": "Copy the value of the previous line",
+    "idem-wildcard-info": "Copiar o valor da linha anterior",
     "image": "Imagem",
     "images": "Imagens",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
@@ -945,7 +945,7 @@
     "memcache-host": "Servidor Memcache",
     "memcache-port": "Porta do Memcache",
     "memcache-prefix": "Prefixo Memcache",
-    "memcache-set-key-item": "Elemento configurado '0' para Memcache.",
+    "memcache-set-key-item": "Elemento atribuído '%item%' ao Memcache.",
     "menu": "Menu",
     "message": "Mensagem",
     "messages-component-title": "Avisos e Mensagens",
@@ -1004,7 +1004,7 @@
     "new-address": "Nova endereço",
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
-    "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
     "new-password": "Nova senha",
     "new-price": "Novo preço",
     "new-refund": "Nova Devolução",
@@ -1051,7 +1051,7 @@
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
-    "numsupplier": "Num. fornecedor",
+    "numsupplier": "Núm. fornecedor",
     "observations": "Observações",
     "october": "Octubre",
     "offsetting-account": "Offsetting account",
@@ -1135,7 +1135,7 @@
     "period": "Período",
     "personalized": "Personalizado",
     "phase": "Fase",
-    "phone": "telefone",
+    "phone": "Telefone",
     "phone2": "Telefone 2",
     "phones": "Telefones",
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
@@ -1203,7 +1203,7 @@
     "product-not-found": "Produto %ref% não encontrado",
     "products": "Produtos",
     "profile": "perfil",
-    "profit-and-loss": "Profit and Loss",
+    "profit-and-loss": "Lucros e Perdas",
     "profit-and-loss-balance": "Balancete de lucros e perdas",
     "profits": "Lucros",
     "project": "Projeto",
@@ -1216,10 +1216,10 @@
     "purchase-rate": "Taxa de compras",
     "purchased-quantity": "q",
     "purchases": "Compras",
-    "purchases-subaccount-not-found": "purchases-subaccount-not-found",
+    "purchases-subaccount-not-found": "Subconta de compras não encontrada",
     "pvp": "Preço de venda",
     "pvp-total": "Preço total de varejo",
-    "pvp-unit": "Unit retail price",
+    "pvp-unit": "Preço de venda ao consumidor",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor de 'pvptotal' da linha %reference% do documento. Valor correto: %total%",
     "quantity": "Quantidade",
@@ -1228,7 +1228,7 @@
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "Gerando mais itens...",
-    "rate": "rate",
+    "rate": "Tarifa",
     "rates": "Preços",
     "re": "RE",
     "re-open": "Reabrir",
@@ -1336,12 +1336,12 @@
     "select-all": "selecionar-todos",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
-    "select-user": "Select User",
+    "select-user": "Selecionar usuário",
     "selected-quantity": "approve-quantity",
     "selector-number": "Seletor",
     "send": "Enviar",
     "send-anonymous-data": "Enviar dados anônimos",
-    "send-audios": "Enviar audios",
+    "send-audios": "Enviar áudios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
     "send-invoices": "Enviar faturas",
@@ -1392,7 +1392,7 @@
     "simple": "Simples",
     "simplified": "Simplificado",
     "size": "size",
-    "sketch": "Boceto",
+    "sketch": "Esboço",
     "sketch-invoice-warning": "Esta fatura ainda é um esboço. Torná-la oficial alterando seu status para emitida.",
     "small": "Pequeno",
     "smaller-than": "Menor que",
@@ -1423,7 +1423,7 @@
     "states": "Estados",
     "status": "Status",
     "status-document": "Status do documento",
-    "status-name-valid-length": "Nome do status inválido. Deve ter entre 1 e 20 caracteres.",
+    "status-name-valid-length": "Nome de status inválido. Deve ter entre 1 e 20 caracteres.",
     "status-value-is-number": "El campo estado deve ser numérico.",
     "stock": "Estoque",
     "stock-transfer": "stock transfer",
@@ -1438,7 +1438,7 @@
     "sub-type": "Subtipo",
     "subaccount": "Subconta",
     "subaccount-bad-codcuenta": "A",
-    "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
+    "subaccount-belongs-other-year": "A subconta %subAccountCode% pertence a outro exercício.",
     "subaccount-irpf": "Conta para deduções",
     "subaccount-irpf-creditor": "Subconta de retenções para compras",
     "subaccount-not-found": "Subconta %subAccountCode% não encontrada.",
@@ -1563,7 +1563,7 @@
     "type-critical": "Type critical",
     "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
-    "type-error": "Type error",
+    "type-error": "Tipo de erro",
     "type-info": "Informação do tipo",
     "type-notice": "Tipo aviso",
     "type-success": "Tipo correto",
@@ -1624,7 +1624,7 @@
     "vat-regime": "Regime de IVA",
     "VAT-register": "Registro de VAT",
     "vat-regularization": "Regularização de IVA",
-    "vehicle": "Vehículo",
+    "vehicle": "Veículo",
     "verified": "verificado",
     "version": "Versão",
     "video": "Vídeo",
@@ -1679,7 +1679,7 @@
     "you-sent-a-video": "Você enviou um vídeo",
     "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
-    "zip-code": "Código postal",
+    "zip-code": "Código Postal",
     "zip-codes": "Códigos postais",
     "zip-error-wrong-structure": "zip-error-wrong-structure"
 }
