--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -888,7 +888,7 @@
     "location": "Localisació",
     "lock-accounting": "Bloquejar comptabilitat",
     "lock-entry": "Bloquejar assentament",
-    "lock-invoice": "Bloquejar factura",
+    "lock-invoice": "Marcar emesa",
     "lock-unlock": "Bloquejar-Desbloquejar",
     "lock-unlock-account-entry": "Bloquejar\/Desbloquejar l'assentament contable",
     "locked": "Bloquejat",
@@ -1455,7 +1455,7 @@
     "sum-netos-line-tax-must-be": "La suma dels nets de les llínees del IVA deuria ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals del IVA de les llínees del IVA ha de ser: %lineTotalTax%",
     "summary": "Resum",
-    "sums-and-balances": "Sumas y saldos",
+    "sums-and-balances": "Sumes i saldos",
     "sunday": "sunday",
     "supplied": "Subministrat",
     "supplied-amount": "Suplits",
@@ -1605,7 +1605,7 @@
     "using-apc": "Usant la caché APC",
     "using-filecache": "Usant el Filecache",
     "using-memcache": "Usant la Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Vàlid per a un dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de valoració",
